Fixed issue with wrong datasource definition